--- a/t.plist
+++ b/t.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://150.109.146.122/originalIpa/bf.ipa</string>
+					<string>https://github.com/kick123/sign/raw/master/bf.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
