--- a/t.plist
+++ b/t.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/kick123/sign/raw/master/bf.ipa</string>
+					<string>https://ipa.qp404.com/ipas/bf/e3e033dd392e8f79aca56b1eae970bc486a516db.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
